assets/css/_footer.scss
.footer {
  background-color: white;
  padding-top: 2%;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
}

footer {
  min-padding-left: 5.5em;
  p {
    color: $charcoal;
  }
  ul {
    list-style-type: none;
    padding-left: 3em;
  }
  .flex-container {
    padding-left: 20%;
  }
  .more-left-padding {
    padding-left: 45%;
  }
}

#copyright-info {
  background-color: $black;
  width: 100%;
  padding-top: .5em;
  margin: 0;
  p {
    color: gray;
  }
}

@media (max-width: 768px) {
  footer {
    padding-left: 3%;
    ul {
      padding-left: 0;
    }
    .flex-container {
      padding-left: 0;
    }
    .more-left-padding {
      padding-left: 0;
    }
  }
}

